--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <h1>Wyszukiwarka krajów</h1>
         <button id="search">Szukaj kraju</button>
-        <input id="country-name" type="text" />
+        <input id="country-name" type="text">
         <h1>Lista krajów</h1>
         <div id="countries">
             <li>Brak danych</li>
